--- a/current/blog.html
+++ b/current/blog.html
@@ -149,7 +149,7 @@
                   <p class="Blog-Item-Desc__Text">Очередной закон № 325-ФЗ от 29 сентября 2019 года внес многочисленные поправки в Налоговый Кодекс Российской Федерации.</p>
                   <button class="Blog-Item-Desc__Btn">Читать статью</button>
                 </div>
-                <div class="Blog-Item-Img"><img src="assets/images/Post/post.png"/></div></a><a class="Blog-Item" href="#">
+                <div class="Blog-Item-Img"><img src="assets/images/post/post.png"/></div></a><a class="Blog-Item" href="#">
                 <div class="Blog-Item-Desc">
                   <p class="Blog-Item-Desc__Title">Что нового в налоговом <br>учете с 2020 года</p>
                   <div class="Blog-Item-Desc-Sub">
@@ -159,7 +159,7 @@
                   <p class="Blog-Item-Desc__Text">Очередной закон № 325-ФЗ от 29 сентября 2019 года внес многочисленные поправки в Налоговый Кодекс Российской Федерации.</p>
                   <button class="Blog-Item-Desc__Btn">Читать статью</button>
                 </div>
-                <div class="Blog-Item-Img"><img src="assets/images/Post/post.png"/></div></a><a class="Blog-Item" href="#">
+                <div class="Blog-Item-Img"><img src="assets/images/post/post.png"/></div></a><a class="Blog-Item" href="#">
                 <div class="Blog-Item-Desc">
                   <p class="Blog-Item-Desc__Title">Что нового в налоговом <br>учете с 2020 года</p>
                   <div class="Blog-Item-Desc-Sub">
@@ -169,7 +169,7 @@
                   <p class="Blog-Item-Desc__Text">Очередной закон № 325-ФЗ от 29 сентября 2019 года внес многочисленные поправки в Налоговый Кодекс Российской Федерации.</p>
                   <button class="Blog-Item-Desc__Btn">Читать статью</button>
                 </div>
-                <div class="Blog-Item-Img"><img src="assets/images/Post/post.png"/></div></a><a class="Blog-Item" href="#">
+                <div class="Blog-Item-Img"><img src="assets/images/post/post.png"/></div></a><a class="Blog-Item" href="#">
                 <div class="Blog-Item-Desc">
                   <p class="Blog-Item-Desc__Title">Что нового в налоговом <br>учете с 2020 года</p>
                   <div class="Blog-Item-Desc-Sub">
@@ -179,7 +179,7 @@
                   <p class="Blog-Item-Desc__Text">Очередной закон № 325-ФЗ от 29 сентября 2019 года внес многочисленные поправки в Налоговый Кодекс Российской Федерации.</p>
                   <button class="Blog-Item-Desc__Btn">Читать статью</button>
                 </div>
-                <div class="Blog-Item-Img"><img src="assets/images/Post/post.png"/></div></a></section>
+                <div class="Blog-Item-Img"><img src="assets/images/post/post.png"/></div></a></section>
             <button class="Blog__More">Показать еще<span><svg width="8" height="5" viewBox="0 0 8 5" fill="none" xmlns="http://www.w3.org/2000/svg">
 <path d="M1 1L4 4L7 1" stroke="#898989" stroke-linecap="round" stroke-linejoin="round"/>
 </svg></span></button>
